--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .App {
   text-align: center;
+  background-color: black;
 }
+/* * {
+  text-align: center;
+  background-color: gray;
+} */
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -16,7 +21,18 @@
 
 .App-title {
   font-size: 1.5em;
+  font-family: 'Inknut Antiqua', serif;
+
 }
+.title {
+  font-family: 'Inknut Antiqua', serif;
+  font: bold;
+  
+ }
+
+.score {
+  font-family: 'Inknut Antiqua', serif;
+ }
 
 .App-intro {
   font-size: large;
@@ -25,4 +41,12 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.wrapper {
+  background-color: black;
+}
+
+.img {
+  border: 50px, #999;
 }
