--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -2,8 +2,17 @@
     width: 100%;
     text-align: center;
     font-size: 3rem;
-    text-decoration: underline;
+    /* text-decoration: underline; */
     color: #2A77AE;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
   }
   
+  .jumbotron {
+    background-color: #8B0000;
+    padding-top: 40px;
+    padding-bottom: 20px;
+  }
+
+  h1 {
+    font: bold;
+  }
